--- a/nosotros.html
+++ b/nosotros.html
@@ -24,37 +24,21 @@
 
         </div>
     </nav>
-    <div class="parrafo">
-        <h2>Misión</h2>
-        <p>
-            Nuestra misión es proporcionar soluciones innovadoras y de alta calidad que impulsen el crecimiento y la transformación de nuestros clientes, 
-            contribuyendo al desarrollo sostenible y al bienestar de la sociedad.
-        </p>
 
-        <h2>Visión</h2>
-        <p>
-            Ser reconocidos como líderes en el sector, destacándonos por nuestra excelencia, compromiso y capacidad para generar un impacto positivo en 
-            las organizaciones y comunidades con las que trabajamos.
-        </p>
+    <h2 class="text-center mb-4"></h2>
+    <div id="servicios-externo2" class="row g-4">
+        <!-- aqui se carga la API Servicios-->
 
-        <h2>Valores</h2>
-        <ul>
-            <li><strong>Innovación:</strong> Promovemos la creatividad y el desarrollo de ideas que transformen y mejoren la vida de las personas.</li>
-            <li><strong>Compromiso:</strong> Nos dedicamos a cumplir con los más altos estándares de calidad y responsabilidad en cada proyecto.</li>
-            <li><strong>Integridad:</strong> Actuamos con ética, transparencia y respeto en todas nuestras relaciones.</li>
-            <li><strong>Colaboración:</strong> Fomentamos el trabajo en equipo y la construcción de relaciones sólidas con nuestros clientes y socios.</li>
-        </ul>
-
-        <h2>Filosofía Empresarial</h2>
-        <p>
-            Creemos en el poder de la tecnología y la innovación como herramientas para transformar el mundo. Nuestra filosofía se basa en la mejora continua, 
-            la sostenibilidad y el enfoque centrado en las personas, asegurando que cada solución que ofrecemos esté alineada con las necesidades y objetivos 
-            de nuestros clientes.
-        </p>
     </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="js/principal.js"></script>
+
 </body>
 
 </html>
