--- a/nuestroservicios.html
+++ b/nuestroservicios.html
@@ -25,34 +25,24 @@
         </div>
     </nav>
 
-    <div class="parrafo">
-        
-        <p>
-            Se presentarán los servicios ofrecidos por la empresa, detallando cada uno de ellos con una breve
-            descripción y destacando sus beneficios para los clientes.
-        </p>
-        <ul>
-            <li>
-                <strong>Consultoría Digital:</strong> Ofrecemos asesoramiento especializado para transformar
-                digitalmente tu negocio, optimizando procesos y mejorando la experiencia del cliente.
-            </li>
-            <li>
-                <strong>Soluciones Multiexperiencia:</strong> Creamos experiencias integradas en múltiples plataformas,
-                asegurando una interacción fluida y consistente para los usuarios.
-            </li>
-            <li>
-                <strong>Evolución de Ecosistemas:</strong> Ayudamos a modernizar y evolucionar los ecosistemas
-                tecnológicos de tu empresa, garantizando escalabilidad y eficiencia.
-            </li>
-            <li>
-                <strong>Soluciones Low-Code:</strong> Desarrollamos aplicaciones rápidas y eficientes utilizando
-                plataformas de bajo código, reduciendo costos y tiempos de implementación.
-            </li>
-        </ul>
+    <h2 class="text-center mb-4"></h2>
+    <div id="servicios-externos" class="row g-4">
+
+        <!-- aqui se carga la API Servicios-->
+
     </div>
+    
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="js/principal.js"></script>
 </body>
 
 </html>
